--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "next": "10.2.0",
+    "node-sass": "^4.14.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-countup": "^4.3.3",
+    "react-dom": "17.0.2",
+    "react-responsive": "^8.2.0",
+    "react-scroll": "^1.8.2",
+    "react-typist": "^2.0.5",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "@iconify-icons/logos": "^1.1.9",
+    "@iconify/react": "^1.1.4",
+    "@types/react": "^17.0.5",
+    "@types/react-typist": "^2.0.1",
+    "file-loader": "^6.2.0",
+    "typescript": "^4.2.4"
   }
 }
