--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lastkdj.github.io/myportfolio/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "gh-pages -d build",
     "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "gh-pages": "^3.1.0",
     "next": "10.2.0",
     "node-sass": "^4.14.1",
     "react": "17.0.2",
