--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "gh-pages": "^3.1.0",
     "next": "10.2.0",
     "node-sass": "^4.14.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
+    "react-carousel-slider": "^2.0.13",
     "react-countup": "^4.3.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-responsive": "^8.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-scroll": "^1.8.2",
+    "react-touch-carousel": "^0.9.4",
     "react-typist": "^2.0.5",
+    "reactstrap": "^8.9.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
@@ -29,6 +35,7 @@
     "@types/react": "^17.0.5",
     "@types/react-typist": "^2.0.1",
     "file-loader": "^6.2.0",
+    "react-slick": "^0.28.1",
     "typescript": "^4.2.4"
   }
 }
