--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "antd": "^4.16.1",
     "gh-pages": "^3.1.0",
     "next": "10.2.0",
     "node-sass": "^4.14.1",
@@ -24,6 +25,7 @@
     "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-scroll": "^1.8.2",
+    "react-spring": "^9.2.1",
     "react-touch-carousel": "^0.9.4",
     "react-typist": "^2.0.5",
     "reactstrap": "^8.9.0",
